--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Mukta:wght@300;400;600;700&display=swap');
-
 /* genericos */
 
 :root {
@@ -73,10 +72,9 @@ body {
     text-decoration: underline;
 }
 
-.menuNav__logo {
-    width: 20%
+.menuNav__logo img {
+    width: 20%;
 }
-
 
 .menuNav ul {
 
@@ -95,8 +93,14 @@ body {
 
     }
 
-    .menuNav__logo {
-        width: 35%
+    .menuNav__logo>a img {
+        display: flex;
+        margin: 0 auto;
+    }
+
+
+    .menuNav__logo img {
+        width: 25%
     }
 
 
@@ -135,8 +139,13 @@ body {
 
     }
 
-    .menuNav__logo {
-        width: 20%
+    .menuNav__logo>a img {
+        display: flex;
+        margin: 0 auto;
+    }
+
+    .menuNav__logo img {
+        width: 30%;
     }
 
     .menuNav__logo {
@@ -319,6 +328,8 @@ body {
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -353,7 +364,6 @@ body {
         font-size: 22px;
 
     }
-
 
     .infoNosotros__texto2 p {
 
@@ -887,6 +897,7 @@ footer {
 .bloqueEspecialidades__img img {
     object-fit: cover;
     width: 100%;
+    height: 100%;
     border-radius: 10px;
 
 }
@@ -899,19 +910,25 @@ footer {
         margin-bottom: 80px;
     }
 
-
-
     .bloqueEspecialidad {
         display: grid;
         grid-area: "descripcion""imagen"
             "imagen""descripacion"
             "descripcion""imagen"
             "imagen""descripacion";
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 60% 40%;
         grid-template-rows: 1fr 1fr 1fr 1fr;
         column-gap: 10px;
         row-gap: 10px;
     }
+
+    .bloqueEspecialidades__img img {
+        object-fit: cover;
+        width: 100%;
+
+
+    }
+
 
     .bloqueEspecialidades__info h2 {
         font-size: 22px;
@@ -1012,6 +1029,7 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 20px;
+    column-gap: 20px;
 }
 
 .obrasSociales__bloque__texto {
@@ -1026,9 +1044,14 @@ footer {
     font-size: 14px;
 }
 
+.obrasSociales__bloque__texto h5:hover {
 
+    transform: scale(1.3);
+
+}
 
 @media (min-width:769px) and (max-width: 1024px) {
+
 
     .contenedorOS__img {
         background-position: top center;
@@ -1051,6 +1074,7 @@ footer {
 
 
 @media (min-width:1025px) {
+
 
     .contenedorOS__img {
 
@@ -1094,76 +1118,119 @@ footer {
 
 }
 
-img {
+
+.contenedorCard {
+
+    width: 95%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cards {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.cards img {
 
     height: 100%;
     width: 100%;
     object-fit: cover;
     border-radius: 10px;
-    transition: all 0.3s;
+
 }
 
-.cards__info {
-
-    margin-bottom: 20px;
+.cards .cards__info {
+    width: 0%;
+    height: 98%;
+    top: 0px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-color: var(--color-primario);
+    transition: .5s all;
+    border-radius: 10px;
+    opacity: 0.8;
 }
+
 
 .cards__info p {
     font-size: 18px;
     text-transform: capitalize;
-    color: #4586BF;
+    color: white;
     text-align: center;
     font-weight: bold;
 }
 
+.cards:hover .cards__info {
+    width: 100%;
+
+}
 
 @media (min-width:769px) and (max-width: 1024px) {
 
     .contenedorCard {
 
         display: grid;
-        grid-template-areas: "column1""column2" 
-        "filax" ;
+        grid-template-areas: "column1""column2"
+            "filax";
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-row-gap: 50px;
-column-gap: 10px;
-margin-bottom: 50px;
- }
+        row-gap: 50px;
+        column-gap: 10px;
+        margin-bottom: 50px;
+    }
 
- .cards__info p {
-    font-size: 20px;
+    .cards__info p {
+        font-size: 20px;
 
- 
+
+    }
+
+
+    .cards .cards__info {
+
+        height: 100%
+    }
+
 }
 
-}
-
-@media (min-width:1025px){
+@media (min-width:1025px) {
 
     .contenedorCard {
 
         display: grid;
-        grid-template-areas: "column1""column2" 
-            "filax"  ;
+        grid-template-areas: "column1""column2"
+            "filax";
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-row-gap: 70px;
-column-gap: 20px;
-margin-bottom: 50px;
+        row-gap: 70px;
+        column-gap: 20px;
+        margin-bottom: 50px;
+    }
 
- }
+    .cards__info p {
+        font-size: 24px;
+    }
 
- .cards__info p {
-    font-size: 24px;
-}
+    .containerStaff h1 {
 
-.containerStaff h1 {
+        margin-top: 140px;
+    }
 
-margin-top: 140px;
-}
+    .cards .cards__info {
 
-
+        height: 100%
+    }
 
 
 }
