--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,11 +33,6 @@ body {
     font-family: var(--fuente-principal);
 }
 
-.contenedorCentrar {
-    margin: 0 30px;
-}
-
-
 .whatsaapIcon {
     display: flex;
     flex-direction: row-reverse;
@@ -46,6 +41,8 @@ body {
     left: 18rem;
     z-index: 0;
 }
+
+/*----------------------------------------------- whatsaapIcon---------------------------------------------------------------- */
 
 .fa-square-whatsapp {
     color: #25D366;
@@ -74,11 +71,16 @@ body {
 }
 
 
-/*------------------------------------------------------------------------------------------ Header | MENU-------------------------------------------------------------------------------------- */
+/*------------------------------------------------------------------------------------------ Header | Nav -------------------------------------------------------------------------------------- */
 
 
 .navbarBg {
     background-color: rgba(245, 245, 245, 0.903);
+}
+
+.navbarBg__logo {
+    width: 85px;
+
 }
 
 .navLink {
@@ -96,143 +98,135 @@ body {
     color: var(--color-primario);
 }
 
-.navbarBg__logo {
-    width: 85px;
-
-}
-
 .navLink:hover{
-
     text-decoration: underline;
 }
 
 /* -----------------------------------------------------------------------------------Seccion Carrusel Index------------------------------------------------------------------------------------- */
-
 .carousel-item {
     min-height: 70vh;
     background-repeat: no-repeat;
-    background-position: right center;
+    background-position:  center right;
     background-size: cover;
     position: relative;
 }
 
-.bloqueSeccion {
-
-    display: flex;
-    height: 500px;
-    width: 100%;
-    position: relative;
-}
-
-.bloqueSeccion__img {
-    background-image: url(../Images/Imagen\ 1.jfif);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    background-position: bottom 50px right -310px;
-}
-
-.bloqueSeccion__info {
-    top: 260px;
-    padding: 20px;
-    width: 250px;
-    height: 150px;
-    background-color: var(--color-tarjeta);
-    border-radius: 10px;
-    margin-left: 30px;
+.carouselFilter{
     position: absolute;
-    margin-bottom: 30px;
-
+    top:0;
+    width: 50%;
+    height: 100%;
+   background: rgba(255, 255, 255, 0.647);
+   filter: blur(30px);
+   
+}
+.carouselInfo{
+    position: absolute;
+    top:30%;
+    width: 60%;
+    height: 100%;
 }
 
-.bloqueSeccion__info h1 {
+.carouselInfo h1{
+    margin-left: 20px;
+    margin-top: 20px;
     text-transform: uppercase;
-    color: white;
+    color: var(--color-primario);
     font-family: var(--fuente-Secundaria);
     margin-bottom: 8px;
-    font-size: 20px;
+    font-size: 28px;
+    font-style: Bolder;
 }
 
-
-.bloqueSeccion__info button {
-    color: #4586BF;
-    padding: 5px;
-    border-radius: 8px;
-    border-style: hidden;
-    font-weight: bold;
-    font-family: var(--fuente-Secundaria);
-    text-transform: uppercase;
-    font-size: 14px;
-
-
-}
-
-.bloque__seccionbtn {
+.carouselInfo__btn {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    margin-left: 10px;
+    margin-top: 10px;
     gap: 10px;
 }
 
+.carouselInfo__btn button{
+
+color: var(--color-primario);
+border: none;
+padding: 5px;
+border-radius: 8px;
+font-size: 16px;
+
+
+}
+
+    
 @media (min-width:769px) and (max-width:1024px) {
 
+    .carouselInfo{
+        width: 25%;
 
-    .bloqueSeccion__info {
-        top: 230px;
-        width: 380px;
-        height: 160px;
-        margin-bottom: 60px;
-        margin-left: 60px;
     }
-
-    .bloqueSeccion__info h1 {
-        margin-bottom: 15px;
-        font-size: 25px;
-    }
-
-    .bloqueSeccion__info button {
-        padding: 10px;
-        border-radius: 10px;
+    
+    .carouselInfo h1{
+        margin-left: 30px;
+        margin-top: 20px;
         text-transform: uppercase;
-        font-size: 16px;
+        color: var(--color-primario);
+        font-family: var(--fuente-Secundaria);
+        margin-bottom: 8px;
+        font-size: 34px;
+        font-style: Bolder;
+    
     }
 
-    .bloque__seccionbtn {
-        gap: 20px;
+    .carouselInfo__btn {
+        margin-left: 30px;
+        margin-top: 20px;
+        gap: 15px;
+       
     }
 
-}
+    .carouselInfo__btn button{
 
-@media(min-width:1025px) {
-    .bloqueSeccion__img {
-        background-position: bottom right;
-    }
-
-    .bloqueSeccion__info {
-        top: 260px;
-        width: 500px;
-        height: 180px;
-        margin-bottom: 60px;
-        margin-left: 60px;
-    }
-
-    .bloqueSeccion__info h1 {
-        margin-bottom: 15px;
-        font-size: 30px;
-    }
-
-    .bloqueSeccion__info button {
-        padding: 10px;
-        border-radius: 10px;
-        text-transform: uppercase;
         font-size: 18px;
-    }
-
-    .bloque__seccionbtn {
-        gap: 25px;
-    }
-
+        
+        }
 }
+ 
+@media(min-width:1025px) {
+
+
+    .carouselInfo{
+        width: 24%;
+    }
+    
+    .carouselInfo h1{
+        margin-left: 60px;
+        margin-top: 50px;
+        text-transform: uppercase;
+        color: var(--color-primario);
+        font-family: var(--fuente-Secundaria);
+        margin-bottom: 8px;
+        font-size: 38px;
+        font-style: Bolder;
+    
+    }
+
+
+    .carouselInfo__btn {
+        margin-left: 60px;
+        margin-top: 20px;
+        gap: 20px
+        ;
+    }
+
+    .carouselInfo__btn button{
+
+        padding: 10px;
+        border-radius: 10px;
+       font-size: 20px;
+        }
+
+} 
 
 
 /* ----------------------------------------------------------Main| Nosotros--------------------------------------------------------------------- */
@@ -241,6 +235,8 @@ body {
     display: flex;
     flex-direction: column;
     margin-top: 50px;
+    margin-left: 15px;
+    margin-right: 15px;
 
 }
 
@@ -259,7 +255,6 @@ body {
     font-family: var(--fuente-Secundaria);
     margin-bottom: 25px;
     font-size: 20px;
-
 }
 
 
@@ -306,6 +301,8 @@ body {
         row-gap: 30px;
         column-gap: 30px;
         margin-top: 50px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .infoNosotros__texto p {
@@ -358,6 +355,8 @@ body {
         row-gap: 35px;
         column-gap: 35px;
         margin-top: 50px;
+        margin-left: 60px;
+        margin-right: 60px;
     }
 
     .infoNosotros__texto h2 {
@@ -396,12 +395,21 @@ body {
 
 /* -----------------------------------------------------------------------------Valoraciones ------------------------------------------------------*/
 
-.carouselTestimonial {
-    height: 380px;
-    background-color: #4586BF;
+.valoracion {
+    max-height: 220px;
+   background-color: #4586BF;
     border-radius: 10px;
-    margin: 0 auto
 }
+
+
+.valoracion__texto {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow:auto;
+}
+
 
 .contenedorValoraciones h2 {
     color: #4586BF;
@@ -409,46 +417,41 @@ body {
     text-transform: uppercase;
     text-align: center;
     font-size: 20px;
-    margin-top: 30px;
-}
-
-.valoracion__texto {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 25px;
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 
 .valoracion__texto p {
     color: white;
     font-family: var(--fuente-principal);
-    text-transform: lowercase;
     font-size: 16px;
+    margin: 35px 15px;
+    text-align: left;
+
 }
 
 .valoracion__cita {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     font-style: italic;
     text-transform: capitalize;
-    margin: 25px
+    margin-top: 5px;
 }
 
 @media (min-width:769px) and (max-width:1024px) {
 
-    .carouselTestimonial {
-        height: 210px;
+    .valoracion {
+        max-height: 140px;
     }
 
 
     .contenedorValoraciones h2 {
-
+margin-top: 25px;
         font-size: 22px;
     }
 
-    .valoracion__texto {
+    .valoracion__texto p {
         font-size: 18px;
     }
 
@@ -456,16 +459,16 @@ body {
 
 @media (min-width:1025px) {
 
-    .carouselTestimonial {
-        height: 200px;
+    .valoracion {
+        max-height: 150px
     }
 
     .contenedorValoraciones h2 {
-
+        margin-top: 25px;
         font-size: 24px;
     }
 
-    .valoracion__texto {
+    .valoracion__texto p {
         font-size: 20px;
     }
 
@@ -857,21 +860,28 @@ footer {
     flex-direction: column;
 }
 
+.bloqueEspecialidad__info{
+margin-top: 20px;
 
-.bloqueEspecialidades__info p {
+}
+.bloqueEspecialidad__info p {
     text-align: left;
     font-size: 16px;
     margin: 10px 0px
 }
 
-
-.bloqueEspecialidades__info li {
-    text-align: left;
-    font-size: 16px;
-    margin: 10px 0px
+.bloqueEspecialidad__info ul {
+padding: 0;
+margin-top: 20px;;
 }
 
-.bloqueEspecialidades__info h2 {
+.bloqueEspecialidad__info li {
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.bloqueEspecialidad__info h2 {
     background-color: var(--color-primario);
     text-align: center;
     padding: 15px;
@@ -880,14 +890,14 @@ footer {
     font-size: 20px;
 }
 
-.bloqueEspecialidades__img img {
+.bloqueEspecialidad__img img {
     object-fit: cover;
     width: 100%;
     height: 100%;
     border-radius: 10px;
 }
 
-.bloqueEspecialidades__img2 img {
+.bloqueEspecialidad__img2 img {
 
     object-fit: cover;
     width: 100%;
@@ -898,7 +908,7 @@ footer {
 }
 
 
-.bloqueEspecialidades__img4 img {
+.bloqueEspecialidad__img4 img {
 
     object-fit: cover;
     width: 100%;
@@ -908,6 +918,12 @@ footer {
 }
 
 @media (min-width:769px) and (max-width: 1024px) {
+
+
+    .bloqueEspecialidad__info{
+        margin: 0%;
+        
+        }
 
     .containerEspecialidad h1 {
 
@@ -927,48 +943,48 @@ footer {
         row-gap: 10px;
     }
 
-    .bloqueEspecialidades__img img {
+    .bloqueEspecialidad__img img {
         object-fit: cover;
         width: 100%;
     }
 
-    .bloqueEspecialidades__img2 img {
+    .bloqueEspecialidad__img2 img {
         object-fit: cover;
         width: 100%;
         height: 100%;
     }
 
-    .bloqueEspecialidades__info h2 {
+    .bloqueEspecialidad__info h2 {
         font-size: 22px;
     }
 
-    .bloqueEspecialidades__info p {
+    .bloqueEspecialidad__info p {
         font-size: 18px;
     }
 
 
-    .bloqueEspecialidades__info li {
+    .bloqueEspecialidad__info li {
         font-size: 18px;
     }
 
-    .bloqueEspecialidades__img2 {
+    .bloqueEspecialidad__img2 {
         grid-column: 1/2;
         grid-row: 2/3;
     }
 
-    .bloqueEspecialidades__img2 img {
+    .bloqueEspecialidad__img2 img {
         object-fit: cover;
         width: 100%;
         border-radius: 10px;
 
     }
 
-    .bloqueEspecialidades__img4 {
+    .bloqueEspecialidad__img4 {
         grid-column: 1/2;
         grid-row: 4/5;
     }
 
-    .bloqueEspecialidades__img4 img {
+    .bloqueEspecialidad__img4 img {
 
         object-fit: cover;
         width: 100%;
@@ -976,11 +992,15 @@ footer {
 
     }
 
-
-
 }
 
-@media (min-width:1025px) {
+@media (min-width:1025px){
+
+    .bloqueEspecialidad__info{
+        margin: 0%;
+        
+        }
+
 
     .containerEspecialidad h1 {
 
@@ -1002,37 +1022,37 @@ footer {
         row-gap: 20px;
     }
 
-    .bloqueEspecialidades__info h2 {
+    .bloqueEspecialidad__info h2 {
         font-size: 24px;
     }
 
-    .bloqueEspecialidades__info p {
+    .bloqueEspecialidad__info p {
         font-size: 20px;
     }
 
 
-    .bloqueEspecialidades__info li {
+    .bloqueEspecialidad__info li {
         font-size: 20px;
     }
 
-    .bloqueEspecialidades__img2 {
+    .bloqueEspecialidad__img2 {
         grid-column: 1/2;
         grid-row: 2/3;
     }
 
-    .bloqueEspecialidades__img2 img {
+    .bloqueEspecialidad__img2 img {
         object-fit: cover;
         width: 100%;
         border-radius: 10px;
 
     }
 
-    .bloqueEspecialidades__img4 {
+    .bloqueEspecialidad__img4 {
         grid-column: 1/2;
         grid-row: 4/5;
     }
 
-    .bloqueEspecialidades__img4 img {
+    .bloqueEspecialidad__img4 img {
 
         object-fit: cover;
         width: 100%;
@@ -1046,7 +1066,7 @@ footer {
 
 .contenedorOS {
     display: flex;
-    height: 450px;
+    height: 50vh;
     position: relative;
 }
 
@@ -1059,17 +1079,21 @@ footer {
     width: 100%;
 }
 
-.contenedorOS__titulo {
+.contenedorOS__bg{
+    top: 0px;
     position: absolute;
-    width: 100%;
-    top: 130px;
-    height: 20%;
     background-color: #4586BF;
-    z-index: 2;
-    opacity: 0.8;
+    width: 50%;
+    height: 100%;
+    filter: opacity(75%);
 }
 
-.contenedorOS__titulo h1 {
+.contenedorOS__bg__titulo {
+    position: relative;
+    top: 35%;
+}
+
+.contenedorOS__bg__titulo h1 {
 
     color: var(--color-primario);
     font-family: var(--fuente-Secundaria);
@@ -1078,41 +1102,6 @@ footer {
     text-align: center;
     margin-top: 45px
 }
-
-.obrasSociales {
-    height: 80vh;
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    background-color: var(--color-primario);
-    width: 70%;
-    border-radius: 10px;
-    margin: 30px auto;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    column-gap: 20px;
-}
-
-.obrasSociales__bloque__texto {
-    color: white;
-    font-family: var(--fuente-Secundaria);
-    text-align: center;
-    font-weight: lighter;
-}
-
-
-.obrasSociales__bloque__texto h5 {
-    font-size: 14px;
-}
-
-.obrasSociales__bloque__texto h5:hover {
-
-    transform: scale(1.3);
-
-}
-
-
-/* Prueba Bootstrap */
 
 .styleOSbt{
 
@@ -1244,57 +1233,6 @@ opacity: 80%;
 }
 
 
-
-
-/* @media (min-width:769px) and (max-width: 1024px) {
-
-
-    .contenedorOS__img {
-        background-position: top center;
-    }
-
-    .contenedorOS__titulo {
-        height: 20%;
-        top: 160px;
-    }
-
-    .contenedorOS__titulo h1 {
-        margin-top: 45px
-    }
-
-    .obrasSociales__bloque__texto h5 {
-        font-size: 17px;
-    }
-
-}
-
-
-@media (min-width:1025px) {
-
-
-    .contenedorOS__img {
-
-        background-position: top center;
-
-    }
-
-    .contenedorOS__titulo {
-        top: 170px;
-        height: 18%;
-    }
-
-    .contenedorOS__titulo h1 {
-
-        margin-top: 55px
-    }
-
-    .obrasSociales__bloque__texto h5 {
-        font-size: 20px;
-    }
-
-} */
-
-
 /*----------------------------------------------------------Pagina staff -------------------------------------------------------------------------*/
 .containerStaff {
     display: flex;
@@ -1313,7 +1251,6 @@ opacity: 80%;
     text-transform: uppercase;
 
 }
-
 
 .contenedorCard {
 
@@ -1370,10 +1307,7 @@ opacity: 80%;
 
 .cards:hover .cards__info {
     width: 100%;
-
 }
-
-
 
 .styleRow {
     background-color: #4586BF;
@@ -1390,9 +1324,8 @@ opacity: 80%;
 
 .btnFont h5{
 
-font-weight: bold;
+font-weight: bold;}
 
-}
 
 @media (min-width:769px) and (max-width: 1024px) {
 
