--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -103,6 +103,14 @@ body {
 }
 
 /* -----------------------------------------------------------------------------------Seccion Carrusel Index------------------------------------------------------------------------------------- */
+
+.containerCar__img{
+background-image: url(/Images/Slider2.jpeg);
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+
 .carousel-item {
     min-height: 70vh;
     background-repeat: no-repeat;
