--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -6,13 +6,13 @@
 
 a {
   text-decoration: none;
-  color: var(--color-extra); }
+  color: #F5F5F5; }
 
 li {
   list-style: none; }
 
 body {
-  font-family: 'Mukta', sans-serif; }
+  font-family: "Mukta", sans-serif; }
 
 .navbarBg {
   background-color: rgba(245, 245, 245, 0.903); }
@@ -30,9 +30,8 @@ body {
   color: #4586bf; }
   .navLink:hover {
     text-decoration: underline; }
-
-.navLink:visited {
-  color: #4586bf; }
+  .navLink:visited {
+    color: #4586bf; }
 
 footer {
   background-color: #4586bf; }
@@ -152,7 +151,7 @@ footer {
     width: 40vh; } }
 
 .carousel-item {
-  min-height: 70vh;
+  min-height: 100vh;
   background-repeat: no-repeat;
   background-position: center right;
   background-size: cover;
@@ -171,70 +170,28 @@ footer {
   top: 30%;
   width: 60%;
   height: 100%; }
+  .carouselInfo h1 {
+    margin-left: 20px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    color: #4586bf;
+    font-family: "Fira Sans Condensed", sans-serif;
+    margin-bottom: 8px;
+    font-size: 28px;
+    font-style: Bolder; }
   .carouselInfo .carouselInfo__btn {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-left: 10px;
+    margin-left: 20px;
     margin-top: 10px;
     gap: 10px; }
-
-.carouselInfo h1 {
-  margin-left: 20px;
-  margin-top: 20px;
-  text-transform: uppercase;
-  color: var(--color-primario);
-  font-family: var(--fuente-Secundaria);
-  margin-bottom: 8px;
-  font-size: 28px;
-  font-style: Bolder; }
-
-.carouselInfo__btn button {
-  color: var(--color-primario);
-  border: none;
-  padding: 5px;
-  border-radius: 8px;
-  font-size: 16px; }
-
-@media (min-width: 769px) and (max-width: 1024px) {
-  .carouselInfo {
-    width: 25%; }
-    .carouselInfo .carouselInfo__btn {
-      margin-left: 60px;
-      margin-top: 20px;
-      gap: 20px; }
-  .carouselInfo h1 {
-    margin-left: 30px;
-    margin-top: 20px;
-    text-transform: uppercase;
-    color: var(--color-primario);
-    font-family: var(--fuente-Secundaria);
-    margin-bottom: 8px;
-    font-size: 34px;
-    font-style: Bolder; }
-  .carouselInfo__btn {
-    margin-left: 30px;
-    margin-top: 20px;
-    gap: 15px; }
-  .carouselInfo__btn button {
-    font-size: 18px; } }
-
-@media (min-width: 1025px) {
-  .carouselInfo {
-    width: 24%; }
-  .carouselInfo h1 {
-    margin-left: 60px;
-    margin-top: 50px;
-    text-transform: uppercase;
-    color: var(--color-primario);
-    font-family: var(--fuente-Secundaria);
-    margin-bottom: 8px;
-    font-size: 38px;
-    font-style: Bolder; }
-  .carouselInfo__btn button {
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 20px; } }
+    .carouselInfo .carouselInfo__btn button {
+      color: #4586bf;
+      border: none;
+      padding: 5px;
+      border-radius: 8px;
+      font-size: 16px; }
 
 /* ----------------------------------------------------------Main| Nosotros--------------------------------------------------------------------- */
 .infoNosotros {
@@ -246,13 +203,13 @@ footer {
   .infoNosotros .infoNosotros__texto h2 {
     text-transform: uppercase;
     color: #4586BF;
-    font-family: var(--fuente-Secundaria);
+    font-family: "Fira Sans Condensed", sans-serif;
     margin-bottom: 25px;
     font-size: 20px; }
   .infoNosotros .infoNosotros__texto2 h2 {
     text-transform: uppercase;
     color: #4586BF;
-    font-family: var(--fuente-Secundaria);
+    font-family: "Fira Sans Condensed", sans-serif;
     margin-bottom: 25px;
     font-size: 20px; }
   .infoNosotros .infoNosotros__texto p {
@@ -275,6 +232,109 @@ footer {
     margin-bottom: 20px;
     width: 100%;
     height: 100%; }
+
+/* -----------------------------------------------------------------------------Valoraciones ------------------------------------------------------*/
+.contenedorValoraciones h2 {
+  color: #4586BF;
+  font-family: "Fira Sans Condensed", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-bottom: 25px; }
+
+.valoracion {
+  max-height: 220px;
+  background-color: #4586BF;
+  border-radius: 10px; }
+
+.valoracion__texto {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  overflow: auto; }
+
+.valoracion__texto p {
+  color: white;
+  font-family: "Mukta", sans-serif;
+  font-size: 16px;
+  margin: 35px 15px;
+  text-align: left; }
+
+.valoracion__cita {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-style: italic;
+  text-transform: capitalize;
+  margin-top: 5px; }
+
+.whatsaapIcon {
+  display: flex;
+  flex-direction: row-reverse;
+  position: sticky;
+  bottom: 40px;
+  left: 18rem;
+  z-index: 0; }
+
+.fa-square-whatsapp {
+  color: #25D366; }
+
+.fa-4x {
+  font-size: 4em; }
+
+@media (min-width: 769px) and (max-width: 1024) {
+  .whatsaapIcon {
+    bottom: 70px; } }
+
+@media (min-width: 1025px) {
+  .whatsaapIcon {
+    bottom: 70px; } }
+
+.bloqueFooter__RRSS .icons {
+  color: #4586bf;
+  margin: 0 auto; }
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .carouselInfo {
+    width: 25%; }
+    .carouselInfo h1 {
+      margin-left: 30px;
+      margin-top: 20px;
+      text-transform: uppercase;
+      color: #4586bf;
+      font-family: "Fira Sans Condensed", sans-serif;
+      margin-bottom: 8px;
+      font-size: 34px;
+      font-style: Bolder; }
+    .carouselInfo .carouselInfo__btn {
+      margin-left: 35px;
+      margin-top: 20px;
+      gap: 15px; }
+      .carouselInfo .carouselInfo__btn button {
+        font-size: 18px; } }
+
+@media (min-width: 1025px) {
+  .carouselInfo {
+    width: 24%; }
+    .carouselInfo h1 {
+      margin-left: 60px;
+      margin-top: 50px;
+      text-transform: uppercase;
+      color: #4586bf;
+      font-family: "Fira Sans Condensed", sans-serif;
+      margin-bottom: 8px;
+      font-size: 38px;
+      font-style: Bolder; }
+    .carouselInfo .carouselInfo__btn {
+      margin-left: 55px;
+      margin-top: 20px;
+      gap: 15px; }
+      .carouselInfo .carouselInfo__btn button {
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 20px; } }
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .infoNosotros {
@@ -328,43 +388,6 @@ footer {
       grid-column: 1/2;
       grid-row: 2/4; } }
 
-/* -----------------------------------------------------------------------------Valoraciones ------------------------------------------------------*/
-.contenedorValoraciones h2 {
-  color: #4586BF;
-  font-family: var(--fuente-Secundaria);
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 20px;
-  margin-top: 15px;
-  margin-bottom: 25px; }
-
-.valoracion {
-  max-height: 220px;
-  background-color: #4586BF;
-  border-radius: 10px; }
-
-.valoracion__texto {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  overflow: auto; }
-
-.valoracion__texto p {
-  color: white;
-  font-family: var(--fuente-principal);
-  font-size: 16px;
-  margin: 35px 15px;
-  text-align: left; }
-
-.valoracion__cita {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-style: italic;
-  text-transform: capitalize;
-  margin-top: 5px; }
-
 @media (min-width: 769px) and (max-width: 1024px) {
   .contenedorValoraciones h2 {
     margin-top: 25px;
@@ -382,32 +405,6 @@ footer {
     max-height: 150px; }
   .valoracion__texto p {
     font-size: 20px; } }
-
-.whatsaapIcon {
-  display: flex;
-  flex-direction: row-reverse;
-  position: sticky;
-  bottom: 40px;
-  left: 18rem;
-  z-index: 0; }
-
-.fa-square-whatsapp {
-  color: #25D366; }
-
-.fa-4x {
-  font-size: 4em; }
-
-@media (min-width: 769px) and (max-width: 1024) {
-  .whatsaapIcon {
-    bottom: 70px; } }
-
-@media (min-width: 1025px) {
-  .whatsaapIcon {
-    bottom: 70px; } }
-
-.bloqueFooter__RRSS .icons {
-  color: #4586bf;
-  margin: 0 auto; }
 
 /*----------------------------------------------------------------- pagina contacto------------------------------------------------------------- */
 .contenedorContacto {
@@ -445,7 +442,7 @@ footer {
   text-transform: uppercase;
   font-weight: bold;
   font-size: large;
-  color: var(--color-primario); }
+  color: #4586bf; }
 
 .formulario__label {
   display: flex;
@@ -454,12 +451,12 @@ footer {
   padding-right: 20px; }
 
 .formulario__label__hijo {
-  color: var(--color-primario);
+  color: #4586bf;
   margin-bottom: 5px;
   margin-top: 5px;
   text-transform: capitalize;
   font-weight: 500;
-  font-family: var(--fuente-Secundaria); }
+  font-family: "Fira Sans Condensed", sans-serif; }
 
 .formulario__label__input {
   border-radius: 5px;
@@ -488,9 +485,9 @@ footer {
   padding: 8px;
   border-radius: 5px;
   border-style: none;
-  background-color: var(--color-primario);
+  background-color: #4586bf;
   color: white;
-  font-style: var(--fuente-Secundaria);
+  font-style: "Fira Sans Condensed", sans-serif;
   text-transform: uppercase;
   font-weight: 600; }
 
@@ -529,7 +526,7 @@ footer {
   margin-bottom: 30px; }
 
 .containerEspecialidad h1 {
-  color: var(--color-primario);
+  color: #4586bf;
   text-transform: uppercase;
   margin-top: 100px;
   margin-bottom: 30px;
@@ -557,7 +554,7 @@ footer {
   margin-bottom: 20px; }
 
 .bloqueEspecialidad__info h2 {
-  background-color: var(--color-primario);
+  background-color: #4586bf;
   text-align: center;
   padding: 15px;
   text-transform: uppercase;
@@ -684,8 +681,8 @@ footer {
   top: 35%; }
 
 .contenedorOS__bg__titulo h1 {
-  color: var(--color-primario);
-  font-family: var(--fuente-Secundaria);
+  color: #4586bf;
+  font-family: "Fira Sans Condensed", sans-serif;
   text-transform: uppercase;
   color: white;
   text-align: center;
@@ -791,8 +788,8 @@ footer {
 
 .containerStaff h1 {
   text-align: center;
-  color: var(--color-primario);
-  font-family: var(--fuente-principal);
+  color: #4586bf;
+  font-family: "Mukta", sans-serif;
   margin-top: 160px;
   margin-bottom: 60px;
   text-transform: uppercase; }
@@ -827,7 +824,7 @@ footer {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: var(--color-primario);
+  background-color: #4586bf;
   transition: .5s all;
   border-radius: 10px;
   opacity: 0.8; }
