--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,10 +1,11 @@
-@import "variables";
-@import "header";
-@import "fuentes";
-@import "footer";
-@import "pagina-index";
-@import "icon";
-@import "mediaqueries";
+@import "./_Variables/variables";
+@import "./_Variables/header";
+@import "./_Variables/fuentes";
+@import "./_Variables/footer";
+@import "./_paginas/pagina-index";
+@import "./_paginas/pagina-especialidades";
+@import "./_Variables/icon";
+@import "./_Variables/mediaqueries.scss";
 
 
 
@@ -15,228 +16,6 @@
 
 /* ----------------------------------------------------Pagina Especialidades---------------------------------------------------------------------- */
 
-.containerEspecialidad {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.containerEspecialidad h1 {
-    color: $color-primario;
-    text-transform: uppercase;
-    margin-top: 100px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.bloqueEspecialidad {
-    display: flex;
-    flex-direction: column;
-}
-
-.bloqueEspecialidad__info {
-    margin-top: 20px;
-
-}
-
-.bloqueEspecialidad__info p {
-    text-align: left;
-    font-size: 16px;
-    margin: 10px 0px
-}
-
-.bloqueEspecialidad__info ul {
-    padding: 0;
-    margin-top: 20px;
-    ;
-}
-
-.bloqueEspecialidad__info li {
-    text-align: left;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
-.bloqueEspecialidad__info h2 {
-    background-color:$color-primario;
-    text-align: center;
-    padding: 15px;
-    text-transform: uppercase;
-    color: white;
-    font-size: 20px;
-}
-
-.bloqueEspecialidad__img img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-}
-
-.bloqueEspecialidad__img2 img {
-
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-
-
-}
-
-
-.bloqueEspecialidad__img4 img {
-
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-
-}
-
-@media (min-width:769px) and (max-width: 1024px) {
-
-
-    .bloqueEspecialidad__info {
-        margin: 0%;
-
-    }
-
-    .containerEspecialidad h1 {
-
-        margin-top: 160px;
-        margin-bottom: 80px;
-    }
-
-    .bloqueEspecialidad {
-        display: grid;
-        grid-area: "descripcion""imagen"
-            "imagen""descripacion"
-            "descripcion""imagen"
-            "imagen""descripacion";
-        grid-template-columns: 60% 40%;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        column-gap: 10px;
-        row-gap: 10px;
-    }
-
-    .bloqueEspecialidad__img img {
-        object-fit: cover;
-        width: 100%;
-    }
-
-    .bloqueEspecialidad__img2 img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-    }
-
-    .bloqueEspecialidad__info h2 {
-        font-size: 22px;
-    }
-
-    .bloqueEspecialidad__info p {
-        font-size: 18px;
-    }
-
-
-    .bloqueEspecialidad__info li {
-        font-size: 18px;
-    }
-
-    .bloqueEspecialidad__img2 {
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
-    .bloqueEspecialidad__img2 img {
-        object-fit: cover;
-        width: 100%;
-        border-radius: 10px;
-
-    }
-
-    .bloqueEspecialidad__img4 {
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-
-    .bloqueEspecialidad__img4 img {
-
-        object-fit: cover;
-        width: 100%;
-        border-radius: 10px;
-
-    }
-
-}
-
-@media (min-width:1025px) {
-
-    .bloqueEspecialidad__info {
-        margin: 0%;
-
-    }
-
-
-    .containerEspecialidad h1 {
-
-        margin-top: 160px;
-        margin-bottom: 80px;
-    }
-
-
-
-    .bloqueEspecialidad {
-        display: grid;
-        grid-area: "descripcion""imagen"
-            "imagen""descripacion"
-            "descripcion""imagen"
-            "imagen""descripacion";
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        column-gap: 20px;
-        row-gap: 20px;
-    }
-
-    .bloqueEspecialidad__info h2 {
-        font-size: 24px;
-    }
-
-    .bloqueEspecialidad__info p {
-        font-size: 20px;
-    }
-
-
-    .bloqueEspecialidad__info li {
-        font-size: 20px;
-    }
-
-    .bloqueEspecialidad__img2 {
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-
-    .bloqueEspecialidad__img2 img {
-        object-fit: cover;
-        width: 100%;
-        border-radius: 10px;
-
-    }
-
-    .bloqueEspecialidad__img4 {
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-
-    .bloqueEspecialidad__img4 img {
-
-        object-fit: cover;
-        width: 100%;
-        border-radius: 10px;
-
-    }
-
-}
 
 /* --------------------------------------------------------------------Pagina Obras Sociales------------------------------------------------------- */
 
